--- a/pipelines/Jenkinsfile
+++ b/pipelines/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
   agent {
-    label 'maven'
+    label 'geerten'
   }
   environment {
     template = "${TEMPLATE}"
@@ -36,14 +36,36 @@ pipeline {
         }
       }
     }
+    stage('Ensure DeploymentConfig exists in build project') {
+      when {
+        expression {
+          openshift.withCluster() {
+            openshift.withProject("${buildproject}") {
+              return !openshift.selector("dc/${appname}").exists();
+            }
+          }
+        }
+      }
+      steps {
+        script {
+          openshift.withCluster() {
+            openshift.withProject("${buildproject}") {
+              openshift.apply(openshift.process("-f", template, "-p NAME=${appname}"))
+              openshift.selector("dc/${appname}").delete()
+            }
+          }
+        }
+      }
+    }
     stage('Deploy in cicd-demo') {
       steps {
         script {
           openshift.withCluster() {
             openshift.withProject("${buildproject}") {
-              newDeploy = openshift.selector("dc/${appname}").rollout()
-              newDeploy.latest()
-              newDeploy.status('-w')
+              def dcSelector = openshift.selector("dc/${appname}")
+              def RolloutMan = dcSelector.rollout()
+              RolloutMan.latest()
+              RolloutMan.status('-w')
             }
           }
         }
